# Ghast

./: .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  banner.py  config.yaml  ghast.py  pyproject.toml  requirements-dev.txt  soul.py
.github/workflows/: python-app.yml
docs/: index.html
examples/: ghast.yml
ghast/: .gitignore  __init__.py  cli.py
ghast/core/: __init__.py  config.py  fixer.py  scanner.py
ghast/reports/: __init__.py  console.py  json.py  report.py  sarif.py
ghast/rules/: __init__.py  base.py  best_practices.py  engine.py  security.py
ghast/tests/: conftest.py  test_cli.py  test_cli_edge.py  test_main.py
ghast/tests/core/: test_config.py  test_config_edge.py  test_fixer.py  test_fixer_edge.py  test_scanner.py  test_scanner_edge.py
ghast/tests/reports/: test_console.py  test_html.py  test_json.py  test_report_edge.py  test_sarif.py
ghast/tests/rules/: test_base.py  test_best_practices.py  test_best_practices_edge.py  test_engine.py  test_engine_edge.py  test_security_rules.py  test_security_rules_edge.py
ghast/tests/utils/: test_file_handler.py  test_file_handler_edge.py  test_formatter.py  test_version.py  test_yaml_handler.py  test_yaml_handler_edge.py
ghast/utils/: __init__.py  banner.py  file_handler.py  formatter.py  version.py  yaml_handler.py
