[project]
name = "ghast"
version = "0.2.0"
description = "Audit and fix GitHub Actions workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sean Evans", email = "sean.w.evans@gmail.com" }]
dependencies = [
    "pyyaml>=6.0",
    "rich",
    "click",
]
requires-python = ">=3.8"

[project.scripts]
ghast = "ghast.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
